arm64: dts: mediatek: Remove custom firmware path
Change-Id: Ic4396c924fc0ffd4f879e50b39be48d3e063d580
Signed-off-by: bengris32 <bengris32@protonmail.ch>

--- a/arch/arm64/boot/dts/mediatek/mt6983.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6983.dts
@@ -415,8 +415,7 @@
 			swiotlb=noforce \
 			initcall_debug=1 transparent_hugepage=never \
 			allow_mismatched_32bit_el0 \
-			firmware_class.path=/vendor/firmware \
-			log_buf_len=2m";	//Fuchun.Liao 2021/10/15 modify log_buf size
+			log_buf_len=2m";
 			kaslr-seed = <0 0>;
 			atag,videolfb-fb_base_l = <0x7e605000>;
 			atag,videolfb-fb_base_h = <0x0>;
