--- a/kernel/configs/oplus6983.config
+++ b/kernel/configs/oplus6983.config
@@ -28,15 +28,12 @@ CONFIG_OPLUS_CHARGER_WIRELESS_PEN=y
 CONFIG_OPLUS_CHARGER_OPTIGA=y
 #endif
 #Aries panel bringup
-CONFIG_DRM_PANEL_OPLUS22921_NOVATEK_NT36532W_VDO_144HZ=m
 CONFIG_MTK_AUDIODSP_DEBUG_SUPPORT=y
 CONFIG_TOUCHPANEL_SYNAPTICS_TCM_ONCELL=m
 
 #TP bringup
 CONFIG_TOUCHPANEL_NOVA_NT36532_NOFLASH=m
-CONFIG_OPLUS_BALANCE_ANON_FILE_RECLAIM=y
-
-CONFIG_OPLUS_FEATURE_ABNORMAL_FLAG=m
+# CONFIG_OPLUS_BALANCE_ANON_FILE_RECLAIM is not set
 
 #Add for DFX camera exeption event and log feedback
 CONFIG_OPLUS_CAM_EVENT_REPORT=m
