--- a/arch/arm64/configs/mgk_64_vulscan_k510_defconfig
+++ b/arch/arm64/configs/mgk_64_vulscan_k510_defconfig
@@ -1,15 +1,8 @@
-CONFIG_UBSAN_SHIFT=y
-CONFIG_UBSAN_DIV_ZERO=y
-CONFIG_UBSAN_UNREACHABLE=y
-# CONFIG_UBSAN_OBJECT_SIZE is not set
-CONFIG_UBSAN_BOOL=y
-CONFIG_UBSAN_ENUM=y
 CONFIG_BUILD_CONFIG_FILE="build.config.mtk.aarch64"
+CONFIG_ABI_MONITOR=y
 CONFIG_ARCH_MEDIATEK=y
 CONFIG_MTK_CLKBUF=m
 CONFIG_MTK_CLKBUF_V1=y
-CONFIG_MTK_DCM_MT6789=m
-CONFIG_MTK_DCM_MT6833=m
 CONFIG_MTK_DCM_MT6855=m
 CONFIG_MTK_DCM_MT6879=m
 CONFIG_MTK_DCM_MT6895=m
@@ -20,7 +13,6 @@ CONFIG_MTK_DVFSRC_MET_MT6873=m
 CONFIG_DMABUF_HEAPS_MTK_MM=m
 CONFIG_DMABUF_HEAPS_SYSTEM=m
 CONFIG_DMABUF_HEAPS_DEBUG=m
-CONFIG_BATTERY_MT6358=m
 CONFIG_MTK_BATTERY_OC_POWER_THROTTLING=m
 CONFIG_MTK_BATTERY_PERCENT_THROTTLING=m
 CONFIG_MTK_DYNAMIC_LOADING_POWER_THROTTLING=m
@@ -37,6 +29,7 @@ CONFIG_MTK_MDP=m
 CONFIG_MTK_MDP_MT6893=m
 CONFIG_MTK_MDP_MT6983=m
 CONFIG_MTK_MML=m
+CONFIG_MTK_MKP=m
 CONFIG_MMPROFILE=m
 CONFIG_MTK_LENS=m
 CONFIG_MTK_V4L2_LENS=m
@@ -59,9 +52,6 @@ CONFIG_MTK_DRAM_LOG_STORE=m
 CONFIG_MTK_DRAM_LOG_STORE_ADDR=0x0011DF00
 CONFIG_MTK_DRAM_LOG_STORE_SIZE=0x100
 CONFIG_MTPROF=m
-CONFIG_MTK_IRQ_MONITOR=m
-CONFIG_MTK_IRQ_MONITOR_DEFAULT_ENABLED=y
-CONFIG_MTK_IRQ_MONITOR_IRQ_TIMER_OVERRIDE=y
 CONFIG_MTK_CCCI_DEVICES=y
 CONFIG_MTK_MD1_SUPPORT=25
 CONFIG_MTK_ECCCI_DRIVER=m
@@ -70,7 +60,6 @@ CONFIG_MTK_ECCCI_C2K_USB=m
 CONFIG_MTK_BTIF=m
 CONFIG_MTK_CONN_SCP=m
 CONFIG_MTK_COMBO=m
-CONFIG_MTK_COMBO_CHIP_CONSYS_6789=y
 CONFIG_MTK_COMBO_CHIP_CONSYS_6893=y
 CONFIG_MTK_COMBO_CHIP_CONSYS_6983=y
 CONFIG_MTK_COMBO_CHIP_CONSYS_6879=y
@@ -86,8 +75,6 @@ CONFIG_MTK_GPS_EMI=m
 CONFIG_MTK_FMRADIO=m
 CONFIG_MTK_FM_CHIP="MT6635_FM"
 CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH=y
-CONFIG_MTK_GATE_IC=y
-CONFIG_RT4831A_I2C=m
 CONFIG_TCPC_CLASS=m
 CONFIG_USB_POWER_DELIVERY=m
 CONFIG_TCPC_MT6360=m
@@ -111,17 +98,9 @@ CONFIG_UFSRINGBUF_POC=y
 CONFIG_RPMB=m
 CONFIG_KEYBOARD_MTK_KPD=m
 CONFIG_KEYBOARD_MTK_PMIC=m
-#ifdef OPLUS_FEATURE_TP_BASIC
-CONFIG_OPLUS_MTK_DRM_GKI_NOTIFY=y
-CONFIG_OPLUS_DEVICE_IFNO=m
-CONFIG_TOUCHPANEL_MTK_PLATFORM=y
-CONFIG_TOUCHPANEL_OPLUS=m
-CONFIG_TOUCHPANEL_NOTIFY=m
-CONFIG_TOUCHPANEL_CUSTOM=m
-CONFIG_TOUCHPANEL_SYNAPTICS=m
-CONFIG_TOUCHPANEL_SYNAPTICS_TCM_ONCELL=m
-#endif OPLUS_FEATURE_TP_BASIC
 CONFIG_TOUCHSCREEN_MTK_TOUCH="GT9886 GT9896S NT36672C"
+CONFIG_TOUCHSCREEN_MT6983_ALPHA_SUPPORT=m
+CONFIG_TOUCHSCREEN_MT6895_ALPHA_SUPPORT=m
 CONFIG_SERIAL_8250_MT6577=m
 CONFIG_I2C_MT65XX=m
 CONFIG_SPI_MT65XX=m
@@ -130,7 +109,6 @@ CONFIG_SPMI_MTK_PMIF=m
 # CONFIG_PINCTRL_MT6797 is not set
 # CONFIG_PINCTRL_MT6779 is not set
 CONFIG_PINCTRL_MT6373=m
-CONFIG_PINCTRL_MT6789=m
 CONFIG_PINCTRL_MT6855=m
 CONFIG_PINCTRL_MT6879=m
 CONFIG_PINCTRL_MT6885=m
@@ -180,7 +158,6 @@ CONFIG_MFD_MT6397=m
 CONFIG_MFD_MT6685=m
 CONFIG_MFD_MTK_SPMI_PMIC=m
 CONFIG_REGULATOR_MT6315=m
-CONFIG_REGULATOR_MT6358=m
 CONFIG_REGULATOR_MT6359P=m
 CONFIG_REGULATOR_MT6360=m
 CONFIG_REGULATOR_MT6363=m
@@ -191,6 +168,8 @@ CONFIG_REGULATOR_MTK_DVFSRC=m
 CONFIG_REGULATOR_MTK_VMM=m
 CONFIG_REGULATOR_RT5133=m
 CONFIG_REGULATOR_RT6160=m
+CONFIG_REGULATOR_MT6983_ALPHA_SUPPORT=m
+CONFIG_REGULATOR_MT6895_ALPHA_SUPPORT=m
 CONFIG_MTK_VMM_SPM=m
 CONFIG_MTK_VMM_DBG=m
 CONFIG_MTK_PMIC_PROTECT=m
@@ -214,14 +193,15 @@ CONFIG_DRM_PANEL_HX_NT37701_DPHY_CMD_120HZ=m
 CONFIG_DRM_PANEL_ALPHA_SAMSUNG_S6E3HAE_CMD_120HZ=m
 CONFIG_DRM_PANEL_TRULY_NT35595_CMD=m
 CONFIG_DRM_PANEL_SAMSUNG_ANA6705_CMD=m
+CONFIG_DRM_PANEL_SAMSUNG_OP_CMD=m
+CONFIG_DRM_PANEL_SAMSUNG_OP_CMD_MSYNC2=m
 CONFIG_DRM_PANEL_K6895V1_64_95T_ALPHA_CMD=m
-CONFIG_DRM_PANEL_TIANMA_NT36672C_CPHY_VDO_90HZ_RT4801=m
 CONFIG_DRM_MEDIATEK_PANEL=m
 CONFIG_DRM_MEDIATEK=m
 CONFIG_DRM_MEDIATEK_V2=y
+CONFIG_MTK_GATE_IC=y
+CONFIG_RT4831A_I2C=m
 CONFIG_MTK_GPU_SUPPORT=m
-CONFIG_MTK_GPU_MT6789_SUPPORT=m
-CONFIG_MTK_GPU_MT6833_SUPPORT=m
 CONFIG_MTK_GPU_MT6855_SUPPORT=m
 CONFIG_MTK_GPU_MT6879_SUPPORT=m
 CONFIG_MTK_GPU_MT6893_SUPPORT=m
@@ -229,16 +209,14 @@ CONFIG_MTK_GPU_MT6895_SUPPORT=m
 CONFIG_MTK_GPU_MT6983_SUPPORT=m
 CONFIG_MTK_GPUFREQ_V2=y
 CONFIG_MTK_GPU_COMMON_DVFS_SUPPORT=y
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="s5kjd1_mipi_raw imx519_mipi_raw imx586_mipi_raw imx576_mipi_raw imx481_mipi_raw s5k3m5sx_mipi_raw ov48b_mipi_raw imx766_mipi_raw s5k3p9sp_mipi_raw imx766dual_mipi_raw"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="s5kjd1_mipi_raw imx519_mipi_raw imx586_mipi_raw imx576_mipi_raw imx481_mipi_raw s5k3m5sx_mipi_raw ov48b_mipi_raw imx766_mipi_raw s5k3p9sp_mipi_raw imx766dual_mipi_raw imx766o_mipi_raw imx709o_mipi_raw imx766dualo_mipi_raw s5k3m5sxo_mipi_raw imx499_mipi_raw"
 CONFIG_MTK_IMGSENSOR=m
 CONFIG_MTK_IMGSENSOR_PLATFORM_SUPPORT=y
 CONFIG_MTK_IMGSENSOR_MT6853=m
 CONFIG_MTK_IMGSENSOR_MT6893=m
 CONFIG_MTK_SECURITY_SW_SUPPORT=m
 CONFIG_SND_SOC_MT6338_ACCDET=m
-CONFIG_SND_SOC_MT6366_ACCDET=m
 CONFIG_SND_SOC_MT6368_ACCDET=m
-CONFIG_SND_SOC_MT6369_ACCDET=m
 CONFIG_SND_SOC_MT6359P_ACCDET=m
 CONFIG_SND_SOC_MT6885=m
 CONFIG_SND_SOC_MT6885_MT6359P=m
@@ -246,18 +224,17 @@ CONFIG_SND_SOC_MT6983=m
 CONFIG_SND_SOC_MT6983_MT6338=m
 CONFIG_SND_SOC_MT6879=m
 CONFIG_SND_SOC_MT6879_MT6368=m
+CONFIG_SND_SOC_MT6855=m
+CONFIG_SND_SOC_MT6855_MT6369=m
 CONFIG_SND_SOC_MT6895=m
 CONFIG_SND_SOC_MT6895_MT6368=m
 CONFIG_SND_SOC_MTK_BTCVSD=m
 CONFIG_SND_SOC_RT5512=m
 CONFIG_SND_SOC_TFA9874=m
+CONFIG_SND_SOC_AA006=m
+CONFIG_SND_SOC_BB007=m
+CONFIG_USB_SWITCH_ET7480=m
 CONFIG_USB_MTU3=m
-CONFIG_USB_MTK_HDRC=m
-CONFIG_MTK_MUSB_QMU_SUPPORT=y
-CONFIG_MTK_MUSB_QMU_PURE_ZLP_SUPPORT=y
-CONFIG_MTK_MUSB_DRV_36BIT=y
-CONFIG_USB_MTK_OTG=y
-CONFIG_MTK_MUSB_DUAL_ROLE=y
 CONFIG_MTK_USB_BOOST=m
 CONFIG_MTK_USB_CONFIGFS_RNDIS=m
 CONFIG_MTK_USB_META=m
@@ -270,8 +247,8 @@ CONFIG_LEDS_MTK_PWM=m
 CONFIG_LEDS_PWM=m
 CONFIG_LEDS_REGULATOR_VIBRATOR=m
 CONFIG_LEDS_MT6360=m
-CONFIG_MTK_VIDEO_LM3643=m
 CONFIG_MTK_VIDEO_LM3644=m
+CONFIG_MTK_VIDEO_SY7806=m
 CONFIG_MTK_FLASHLIGHT=m
 CONFIG_MTK_FLASHLIGHT_PT=y
 CONFIG_MTK_FLASHLIGHT_PT_STRICT=y
@@ -281,17 +258,6 @@ CONFIG_V4L2_FLASH_LED_CLASS=m
 CONFIG_RTC_DRV_MT6397=m
 CONFIG_RTC_DRV_MT6685=m
 CONFIG_MTK_UART_APDMA=m
-CONFIG_COMMON_CLK_MT6789=m
-CONFIG_COMMON_CLK_MT6789_AUDIOSYS=m
-CONFIG_COMMON_CLK_MT6789_CAM=m
-CONFIG_COMMON_CLK_MT6789_MMSYS=m
-CONFIG_COMMON_CLK_MT6789_DISP_DSC=m
-CONFIG_COMMON_CLK_MT6789_IMG=m
-CONFIG_COMMON_CLK_MT6789_I2C=m
-CONFIG_COMMON_CLK_MT6789_IMP_IIC_WRAP_EN=m
-CONFIG_COMMON_CLK_MT6789_BUS=m
-CONFIG_COMMON_CLK_MT6789_MFG=m
-CONFIG_COMMON_CLK_MT6789_VCODEC=m
 CONFIG_COMMON_CLK_MT6833=m
 CONFIG_COMMON_CLK_MT6833_AUDIOSYS=m
 CONFIG_COMMON_CLK_MT6833_CAM=m
@@ -344,15 +310,6 @@ CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_C=m
 CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_E=m
 CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_N=m
 CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_S=m
-CONFIG_COMMON_CLK_MT6893_IPESYS=m
-CONFIG_COMMON_CLK_MT6893_MDPSYS=m
-CONFIG_COMMON_CLK_MT6893_MFGCFG=m
-CONFIG_COMMON_CLK_MT6893_MMSYS=m
-CONFIG_COMMON_CLK_MT6893_SCP_ADSP=m
-CONFIG_COMMON_CLK_MT6893_VDECSYS=m
-CONFIG_COMMON_CLK_MT6893_VDECSYS_SOC=m
-CONFIG_COMMON_CLK_MT6893_VENCSYS_C1=m
-CONFIG_COMMON_CLK_MT6893_VENCSYS=m
 CONFIG_COMMON_CLK_MT6895=m
 CONFIG_COMMON_CLK_MT6895_ADSP=m
 CONFIG_COMMON_CLK_MT6895_CAM=m
@@ -364,6 +321,15 @@ CONFIG_COMMON_CLK_MT6895_BUS=m
 CONFIG_COMMON_CLK_MT6895_MDPSYS=m
 CONFIG_COMMON_CLK_MT6895_MFG=m
 CONFIG_COMMON_CLK_MT6895_VCODEC=m
+CONFIG_COMMON_CLK_MT6893_IPESYS=m
+CONFIG_COMMON_CLK_MT6893_MDPSYS=m
+CONFIG_COMMON_CLK_MT6893_MFGCFG=m
+CONFIG_COMMON_CLK_MT6893_MMSYS=m
+CONFIG_COMMON_CLK_MT6893_SCP_ADSP=m
+CONFIG_COMMON_CLK_MT6893_VDECSYS=m
+CONFIG_COMMON_CLK_MT6893_VDECSYS_SOC=m
+CONFIG_COMMON_CLK_MT6893_VENCSYS_C1=m
+CONFIG_COMMON_CLK_MT6893_VENCSYS=m
 CONFIG_COMMON_CLK_MT6983=m
 CONFIG_COMMON_CLK_MT6983_ADSP=m
 CONFIG_COMMON_CLK_MT6983_CCU=m
@@ -420,7 +386,6 @@ CONFIG_SND_SOC_MTK_OFFLOAD=m
 CONFIG_MTK_ADSP_V1=m
 CONFIG_MTK_ADSP_V2=m
 CONFIG_MTK_TINYSYS_MCUPM_SUPPORT=m
-CONFIG_DEVAPC_MT6855=m
 CONFIG_DEVAPC_MT6879=m
 CONFIG_DEVAPC_MT6893=m
 CONFIG_DEVAPC_MT6895=m
@@ -452,22 +417,14 @@ CONFIG_MT635X_EFUSE=m
 CONFIG_INTERCONNECT_MTK=y
 CONFIG_INTERCONNECT_MTK_EMI=m
 CONFIG_MTK_MDDP_SUPPORT=m
-CONFIG_KASAN=y
-# CONFIG_KASAN_HW_TAGS is not set
-CONFIG_KASAN_INLINE=y
-CONFIG_KASAN_STACK=y
-CONFIG_FRAME_WARN=3600
-CONFIG_DEBUG_SECTION_MISMATCH=y
 CONFIG_MTK_PRINTK_UART_CONSOLE=y
 CONFIG_MTK_PRINTK=m
 CONFIG_MTK_LOW_POWER_MODULE=m
-CONFIG_HORAE_THERMAL_SHELL=m
 CONFIG_MTK_LPM_MT6983=m
-CONFIG_MTK_LPM_MT6895=m
 CONFIG_MTK_LPM_MT6893=m
 CONFIG_MTK_LPM_MT6879=m
+CONFIG_MTK_LPM_MT6895=m
 CONFIG_MTK_LPM_MT6855=m
-CONFIG_MTK_LPM_MT6789=m
 CONFIG_MTK_LPM_GS_DUMP_SUPPORT=y
 CONFIG_MTK_PMSR=m
 CONFIG_MTK_SWPM_PERF_ARMV8_PMU=m
@@ -476,8 +433,6 @@ CONFIG_MTK_SWPM_MT6983=m
 CONFIG_MTK_SWPM_MT6893=m
 CONFIG_MTK_SWPM_MT6879=m
 CONFIG_MTK_SWPM_MT6895=m
-CONFIG_MTK_SWPM_MT6855=m
-CONFIG_MTK_SWPM_MT6789=m
 CONFIG_MTK_SLBC=m
 CONFIG_MTK_SLBC_MT6893=m
 CONFIG_MTK_SLBC_MT6983=m
@@ -522,11 +477,10 @@ CONFIG_TYPEC_MUX_PTN36241G=m
 CONFIG_TYPEC_MUX_PS5169=m
 CONFIG_TYPEC_MUX_PS5170=m
 CONFIG_TYPEC_MUX_DP_SELECTOR=m
+CONFIG_TYPEC_MUX_ALPHA_FSA4480=m
 CONFIG_MMSTAT_TRACER=m
 CONFIG_MTK_CM_MGR=m
 CONFIG_MTK_CM_IPI=m
-CONFIG_MTK_CM_MGR_MT6789=m
-CONFIG_MTK_CM_MGR_MT6855=m
 CONFIG_MTK_CM_MGR_MT6893=m
 CONFIG_MTK_CM_MGR_MT6983=m
 CONFIG_MTK_CM_MGR_MT6879=m
@@ -547,8 +501,6 @@ CONFIG_MTK_IRTX_PWM_SUPPORT=m
 CONFIG_MTK_PID_MAP=m
 CONFIG_MTK_ATF_LOGGER=m
 CONFIG_MTK_NEWIDLE_BALANCE=y
-CONFIG_MTK_PRINTK_UART_CONSOLE=y
-CONFIG_MTK_PRINTK=m
 CONFIG_MTK_SOCINFO=m
 CONFIG_ARM_DSU_PMU=m
 CONFIG_MTK_CAM_CAL=m
@@ -566,7 +518,6 @@ CONFIG_MT6375_DBG=m
 CONFIG_MT6360_DBG=m
 CONFIG_IIO_TRIGGERED_BUFFER=m
 CONFIG_MTK_JPEG=m
-CONFIG_MTK_MKP=m
 CONFIG_MTK_SDA=y
 CONFIG_MTK_IRQ_DBG=m
 CONFIG_MEDIATEK_CPUFREQ_DEBUG_LITE=m
@@ -592,26 +543,15 @@ CONFIG_MTK_VDEC_FMT=m
 CONFIG_INTERCONNECT_MTK_MMQOS_MT6983=m
 CONFIG_INTERCONNECT_MTK_MMQOS_MT6879=m
 CONFIG_INTERCONNECT_MTK_MMQOS_MT6895=m
-CONFIG_INTERCONNECT_MTK_MMQOS_MT6855=m
-CONFIG_INTERCONNECT_MTK_MMQOS_MT6789=m
 CONFIG_MTK_BUS_PARITY_CHECK=m
 CONFIG_MTK_CACHE_PARITY_CHECK=m
-CONFIG_PAGE_POISONING=y
-
-#ifdef OPLUS_FEATURE_FINGERPRINT
-CONFIG_OPLUS_FINGERPRINT=y
-CONFIG_OPLUS_FINGERPRINT_GKI_ENABLE=y
-CONFIG_OPLUS_FINGERPRINT_GOODIX_OPTICAL=m
-CONFIG_OPLUS_FINGERPRINT_COMMON=m
-CONFIG_OPLUS_FINGERPRINT_MTK=y
-CONFIG_OPLUS_FINGERPRINT_USE_PROC_OPS=y
-#endif /* OPLUS_FEATURE_FINGERPRINT */
-
+CONFIG_GAUGE_MT6983_ALPHA_SUPPORT=m
 CONFIG_EXT_MODULES="../vendor/mediatek/kernel_modules/connectivity/common ../vendor/mediatek/kernel_modules/connectivity/conninfra ../vendor/mediatek/kernel_modules/connectivity/connfem ../vendor/mediatek/kernel_modules/connectivity/gps/gps_stp ../vendor/mediatek/kernel_modules/connectivity/gps/data_link/plat/v010 ../vendor/mediatek/kernel_modules/connectivity/gps/data_link/plat/v030 ../vendor/mediatek/kernel_modules/connectivity/gps/data_link/plat/v050 ../vendor/mediatek/kernel_modules/connectivity/gps/gps_pwr ../vendor/mediatek/kernel_modules/connectivity/gps/gps_scp ../vendor/mediatek/kernel_modules/gpu ../vendor/mediatek/kernel_modules/connectivity/fmradio"
-
-#ifdef OPLUS_FEATURE_UFF_FINGERPRINT
-CONFIG_OPLUS_FINGERPRINT_GKI_ENABLE=y
-CONFIG_UFF_FINGERPRINT=m
-CONFIG_UFF_FINGERPRINT_MTK=y
-CONFIG_FP_SUPPLY_MODE_LDO=y
-#endif /* OPLUS_FEATURE_UFF_FINGERPRINT */
+CONFIG_NFC_CHIP_SUPPORT=y
+CONFIG_NFC_ST21NFC=m
+CONFIG_NFC_ST54_SPI=m
+CONFIG_KCOV=y
+CONFIG_KCOV_INSTRUMENT_ALL=y
+CONFIG_FAULT_INJECTION=n
+CONFIG_FORTIFY_SOURCE=y
+CONFIG_FRAME_WARN=0
